force-app/main/default/objects/Opportunity/fields/Hold_Period__c.field-meta.xml
<CustomField>
    <fullName>Hold_Period__c</fullName>
    <description>Projected hold period in years.</description>
    <label>Hold Period (yrs)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>