force-app/main/default/objects/Opportunity/fields/Initiate_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Underwriting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Section 12B.I: check to kick the deal into the Underwriting stage (the Opportunity_Initiate_Underwriting flow advances the stage; the NDA-signed validation rule still applies).</description>
    <label>Initiate Underwriting</label>
    <type>Checkbox</type>
</CustomField>