force-app/main/default/objects/Opportunity/fields/Is_Portfolio_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Portfolio_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Portfolio Parent</label>
    <type>Checkbox</type>
</CustomField>