force-app/main/default/objects/Opportunity/fields/Lead_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who approved the lead for underwriting. Conversion is the approval, so LeadConvertService stamps the converting user here automatically (FSD Step 1: capture the approver and pass it to the Opportunity).</description>
    <label>Lead Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Lead-Approved Deals</relationshipLabel>
    <relationshipName>Lead_Approved_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>