force-app/main/default/objects/Opportunity/fields/Listing_Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Listing_Broker_Email__c</fullName>
    <description>Email address of the listing broker, carried from Lead.Listing_Broker_Email__c at conversion. Display only.</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email.</inlineHelpText>
    <label>Listing Broker Email</label>
    <type>Email</type>
</CustomField>