force-app/main/default/objects/Opportunity/fields/Listing_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Listing_Broker_Name__c</fullName>
    <description>Name of the listing broker, carried from Lead.Listing_Broker_Name__c at conversion. The listing broker is often a different person from the submitting broker (see the OpportunityContactRole "Broker" for the submitting broker).</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email.</inlineHelpText>
    <label>Listing Broker Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>