force-app/main/default/objects/Opportunity/fields/Loan_Required__c.field-meta.xml
<CustomField>
    <fullName>Loan_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Required</label>
    <type>Checkbox</type>
</CustomField>