force-app/main/default/objects/Opportunity/fields/LOI_Approved__c.field-meta.xml
<CustomField>
    <fullName>LOI_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the LOI_Approval process on final (unanimous) principal approval. Mirrors UW_Approved__c and triggers LOI_Approval_Stamp (audit stamp onto the primary LOI + panel FYI), since the collapsed single LOI stage no longer changes on approval.</description>
    <label>LOI Approved</label>
    <type>Checkbox</type>
</CustomField>