force-app/main/default/objects/Opportunity/fields/LOI_Prep_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>LOI_Prep_Approval_Date__c</fullName>
    <description>When the Acquisitions team approved starting the LOI (auto-stamped).</description>
    <label>LOI Prep Approval Date</label>
    <type>DateTime</type>
</CustomField>