force-app/main/default/objects/Opportunity/fields/LOI_Prep_Approved__c.field-meta.xml
<CustomField>
    <fullName>LOI_Prep_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Section 14: the Acquisitions team's go-ahead BEFORE the LOI process begins. Optional prep sign-off (approver/date auto-stamped by Opportunity_LOI_Prep_Stamp). No longer gates a stage transition after the LOI stages were collapsed to a single LOI stage.</description>
    <label>LOI Prep Approved</label>
    <type>Checkbox</type>
</CustomField>