force-app/main/default/objects/Opportunity/fields/LOI_Prep_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>LOI_Prep_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who on the Acquisitions team approved starting the LOI (auto-stamped when LOI Prep Approved is checked).</description>
    <label>LOI Prep Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LOI Prep Approved Opportunities</relationshipLabel>
    <relationshipName>LOI_Prep_Approved_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>