force-app/main/default/objects/Opportunity/fields/Market_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Market_Cap_Rate__c</fullName>
    <label>Market Cap Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>