force-app/main/default/objects/Opportunity/fields/Market_Data_As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Data_As_Of_Date__c</fullName>
    <description>System-written by MarketDataSnapshotService when this deal ENTERS underwriting approval (Underwriting_Status__c = &apos;Approved by Principals&apos;). Not for manual entry. A re-approval re-snapshots deliberately - the second approval reviewed the data as it then stood.</description>
    <label>Market Data As Of Date</label>
    <type>Date</type>
</CustomField>