force-app/main/default/objects/Opportunity/fields/Market_Data_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Market_Data_Snapshot__c</fullName>
    <description>System-written by MarketDataSnapshotService when this deal ENTERS underwriting approval (Underwriting_Status__c = &apos;Approved by Principals&apos;). Not for manual entry. Frozen, composed, human-readable copy of every Property__c market value the principals saw at approval - evidentiary, not analytical. A re-approval re-snapshots deliberately. This field is NOT reportable or filterable per metric; that cost was accepted deliberately (Q1) in exchange for the live and frozen layers never drifting, since both are composed by one method.</description>
    <label>Market Data Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>