force-app/main/default/objects/Opportunity/fields/Monthly_Visits__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Visits__c</fullName>
    <description>Placer.ai monthly visit count for this deal. Manually entered - no live Placer.ai connection exists. Mirrors Property__c.Monthly_Visits__c; the two are not reconciled.</description>
    <label>Monthly Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>