force-app/main/default/objects/Opportunity/fields/Offer_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Due_Date__c</fullName>
    <description>Date offers are due for this deal, carried from Lead.Offer_Due_Date__c at conversion.</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email.</inlineHelpText>
    <label>Offer Due Date</label>
    <type>Date</type>
</CustomField>