force-app/main/default/objects/Opportunity/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <description>Status of the Call for Offers on this deal. Open by default; stamped Submitted/Closed by the team. Suppresses the T-minus-due-date alert ladder once Submitted or Closed (OpportunitySelector.queryCallForOffersAlerts). Also stamped Open by CallForOffersStampService when Offer_Due_Date__c first appears on an existing deal, since the picklist &lt;default&gt; only applies on insert.</description>
    <inlineHelpText>Open = offer not yet sent. Submitted = your offer has gone out. Closed = the Call for Offers window is done (won, lost, or withdrawn). Submitted/Closed stop the due-date reminder.</inlineHelpText>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>