force-app/main/default/objects/Opportunity/fields/OneDrive_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>OneDrive_Folder_URL__c</fullName>
    <label>OneDrive Folder URL</label>
    <type>Url</type>
</CustomField>