force-app/main/default/objects/Opportunity/fields/Parse_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Parse_Confidence__c</fullName>
    <description>The LLM extraction's confidence in the deal-screening fields carried onto this Opportunity at conversion, mirrored from Lead.Parse_Confidence__c. The analyst's "should I trust the rest of this?" signal.</description>
    <inlineHelpText>Carried from the Lead at conversion. HIGH/MEDIUM/LOW.</inlineHelpText>
    <label>Parse Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>