force-app/main/default/objects/Opportunity/fields/Placer_URL__c.field-meta.xml
<CustomField>
    <fullName>Placer_URL__c</fullName>
    <label>Placer URL</label>
    <type>Url</type>
</CustomField>