force-app/main/default/objects/Opportunity/fields/Portfolio_Deal__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Portfolio Deal</relationshipLabel>
    <relationshipName>Child_Portfolio_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>