force-app/main/default/objects/Opportunity/fields/Price_PSF__c.field-meta.xml
<CustomField>
    <fullName>Price_PSF__c</fullName>
    <description>Price per square foot. Used for land deals where price is quoted per SF rather than as a cap rate.</description>
    <label>Price PSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>