force-app/main/default/objects/Opportunity/fields/Primary_Contract__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The deal&apos;s primary Contract Review record - drives the Contract tab on the deal page.</description>
    <label>Primary Contract</label>
    <referenceTo>Contract_Review__c</referenceTo>
    <relationshipLabel>Opportunities (Primary Contract)</relationshipLabel>
    <relationshipName>PrimaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>