force-app/main/default/objects/Opportunity/fields/Primary_LOI__c.field-meta.xml
<CustomField>
    <fullName>Primary_LOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The deal&apos;s primary LOI record - drives the LOI tab on the deal page.</description>
    <label>Primary LOI</label>
    <referenceTo>LOI__c</referenceTo>
    <relationshipLabel>Opportunities (Primary LOI)</relationshipLabel>
    <relationshipName>PrimaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>