force-app/main/default/objects/Opportunity/fields/Primary_NDA__c.field-meta.xml
<CustomField>
    <fullName>Primary_NDA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The deal&apos;s primary NDA record - drives the NDA tab on the deal page.</description>
    <label>Primary NDA</label>
    <referenceTo>NDA__c</referenceTo>
    <relationshipLabel>Opportunities (Primary NDA)</relationshipLabel>
    <relationshipName>PrimaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>