force-app/main/default/objects/Opportunity/fields/Primary_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Primary_Underwriting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The deal&apos;s primary Underwriting record - drives the Underwriting tab on the deal page.</description>
    <label>Primary Underwriting</label>
    <referenceTo>Underwriting__c</referenceTo>
    <relationshipLabel>Opportunities (Primary Underwriting)</relationshipLabel>
    <relationshipName>PrimaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>