force-app/main/default/objects/Opportunity/fields/Projected_Loan__c.field-meta.xml
<CustomField>
    <fullName>Projected_Loan__c</fullName>
    <description>Expected loan amount if DPEG uses debt financing. Blank for all-cash deals.</description>
    <label>Projected Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>