force-app/main/default/objects/Opportunity/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <description>Read-only formula mirroring Property__r.Address__c, so the highlight panel can lead with the property address (compact layouts cannot reference cross-object fields). Blank when Property__c is not yet populated. Self-corrects if the Property address is edited later.</description>
    <inlineHelpText>The address of this deal's Property record. Blank if no Property is linked yet.</inlineHelpText>
    <label>Property Address</label>
    <formula>Property__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>