force-app/main/default/objects/Opportunity/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Market</fullName>
            </value>
            <value>
                <fullName>Price Too High</fullName>
            </value>
            <value>
                <fullName>Bad Anchor Tenant</fullName>
            </value>
            <value>
                <fullName>Failed DD</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Seller Withdrew</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>