force-app/main/default/objects/Opportunity/fields/Sale_Process__c.field-meta.xml
<CustomField>
    <fullName>Sale_Process__c</fullName>
    <description>How the property is being marketed for sale (off-market approach, on-market listing, call for offers, or auction), carried from Lead.Sale_Process__c at conversion. Values are byte-identical to the Lead picklist. Per ARCHITECTURE.md §1 rule 7 this is a marketing-mode picklist, not a Status field.</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email.</inlineHelpText>
    <label>Sale Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Off-Market</fullName>
            </value>
            <value>
                <fullName>On-Market Listing</fullName>
            </value>
            <value>
                <fullName>Call for Offers</fullName>
            </value>
            <value>
                <fullName>Auction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>